# neutrasearch

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md
.cargo/: audit.toml
.github/: restore-release-tooling.sh
.github/workflows/: build-npm-platform-packages.yml  ci.yml  publish-pi-package.yml  release.yml
crates/neutra-btrfs/: Cargo.toml
crates/neutra-btrfs/src/: lib.rs
crates/neutra-btrfs/src/linux/: parallel.rs
crates/neutra-core/: Cargo.toml
crates/neutra-core/examples/: compact_benchmark.rs
crates/neutra-core/src/: compact.rs  delta.rs  index.rs  lib.rs  mounts.rs  proto.rs  query.rs  types.rs
crates/neutra-ext4/: Cargo.toml
crates/neutra-ext4/src/: lib.rs
crates/neutra-gui/: Cargo.toml  build.rs
crates/neutra-gui/assets/fonts/: README.md  SHA256SUMS
crates/neutra-gui/src/: main.rs  terminal.rs  ui.rs
crates/neutra-gui/src/ui/: results.rs  treemap.rs
crates/neutra-helper/: Cargo.toml
crates/neutra-helper/src/: main.rs  watch_linux.rs  windows_service.rs
crates/neutra-macos/: Cargo.toml
crates/neutra-macos/src/: lib.rs
crates/neutra-mcp/: Cargo.toml
crates/neutra-mcp/src/: main.rs
crates/neutra-ntfs/: Cargo.toml
crates/neutra-ntfs/src/: lib.rs
crates/neutra-query/: Cargo.toml
crates/neutra-query/src/: main.rs
crates/neutra-remote/: Cargo.toml
crates/neutra-remote/src/: lib.rs
crates/neutra-zfs/: Cargo.toml
crates/neutra-zfs/src/: lib.rs
docs/: index-format.md  production.md
docs/feedback/: live-user-feedback.md  ui-automation-walkthrough-2026-07-22-round-3.md  ui-automation-walkthrough-2026-07-22.md  ui-automation-walkthrough.md
packaging/windows/: install-service.ps1  neutrasearch.iss  remove-service.ps1
pi-plugin/: README.md  neutrasearch.ts
scripts/: check-no-walk.sh  package_installers.py  package_release.py
