[package]
name = "neutra-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
bincode.workspace = true
thiserror.workspace = true
rayon.workspace = true
memmap2.workspace = true
zstd.workspace = true
crc32fast.workspace = true
fs2.workspace = true
libc.workspace = true
