[package]
name = "neutra-gui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "neutrasearch"
path = "src/main.rs"

[dependencies]
neutra-core.workspace = true
neutra-remote = { path = "../neutra-remote" }
anyhow.workspace = true
regex = "1"
eframe = "0.34"
egui = "0.34"
egui_expressive = { git = "https://github.com/NetroAki/egui_expressive.git", rev = "10e4f801efab1e777efb02258327ca6b64aaefa7", default-features = false }
